--- a/python-webapp/requirements.txt
+++ b/python-webapp/requirements.txt
@@ -5,7 +5,7 @@ Flask-Caching==2.1.0
 
 # Data Processing
 numpy==1.26.2
-pandas==2.1.4
+pandas
 scikit-learn==1.3.2
 openpyxl==3.1.2
 
@@ -17,3 +17,4 @@ plotly==5.18.0
 
 # WSGI Server (for local testing, Passenger provides this on Netcup)
 gunicorn==21.2.0
+
