--- a/python-webapp/requirements.txt
+++ b/python-webapp/requirements.txt
@@ -6,7 +6,7 @@ Flask-Caching==2.1.0
 # Data Processing
 numpy==1.26.2
 pandas
-scikit-learn
+scikit-learn>=1.5.0 
 openpyxl==3.1.2
 
 # HTTP Requests
@@ -17,5 +17,6 @@ plotly==5.18.0
 
 # WSGI Server (for local testing, Passenger provides this on Netcup)
 gunicorn==21.2.0
+
 
 
